[package]
name = "engine-jolt"
description = "Bevy-agnostic safe Rust wrapper over JoltC. Engine-owned safety layer for xtreme-game-engine's engine-plugin-physics. Skeleton placeholder; surface authored in v0.22 Step 2."
version = "0.0.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bantarus/jolt-rust"
edition = "2021"

[features]
default = []

# Pull joltc-sys + the JoltPhysics C++ runtime. Without this feature
# engine-jolt builds as a no-op stub so `cargo check --workspace` in
# downstream engine-game-engine workspaces stays light (no cmake /
# clang / Jolt C++). Mirrors the engine-plugin-rive `floor` / `zero_copy`
# default-off feature precedent.
native = ["dep:joltc-sys"]

# Build Jolt with JPH_CROSS_PLATFORM_DETERMINISTIC=ON. Bit-identical
# physics across Win-MSVC / Linux-Clang / macOS-ARM64 / Linux-ARM64
# at ~8% perf cost. Engine v0.22's headline value -- default on in
# downstream engine-plugin-physics's `native` feature.
cross_deterministic = ["native", "joltc-sys/cross-platform-deterministic"]

# Pass-throughs to joltc-sys.
double_precision = ["native", "joltc-sys/double-precision"]
object_layer_u32 = ["native", "joltc-sys/object-layer-u32"]
asserts = ["native", "joltc-sys/asserts"]

[dependencies]
joltc-sys = { path = "../joltc-sys", default-features = false, optional = true }
# Pinned to 0.30 to match Bevy 0.18.1's glam dep so engine-plugin-physics
# (Bevy-side) sees the same Vec3/Quat types as engine-jolt and can pass
# Transform.translation directly to BodyDef.position without conversion.
# Rolt 0.3.1 (reference, not dep) is on 0.32; we accept the divergence
# since we don't depend on rolt.
glam = "0.30"
paste = "1.0.15"
thiserror = "1.0"

[lints.clippy]
# Same rationale as rolt: bindgen structs carry padding; ..zeroed()
# closures need needless_update tolerance.
needless_update = { level = "allow" }
new_without_default = { level = "allow" }
