[package]
name = "joltc-sys"
description = "Unsafe bindings to Jolt Physics using JoltC"
version = "0.3.1+Jolt-5.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SecondHalfGames/jolt-rust"
edition = "2021"

exclude = ["JoltC/JoltPhysics/Assets", "JoltC/JoltPhysics/TestFramework", "JoltC/JoltPhysics/Samples", "JoltC/JoltPhysics/UnitTests"]

[features]
default = []

# Enable Jolt's debug assertions
asserts = []

# Changes all world coordinates to use f64 instead of 32 coordinates.
double-precision = []

# Changes ObjectLayer and related types to be u32 instead of u16.
object-layer-u32 = []

# Build Jolt with JPH_CROSS_PLATFORM_DETERMINISTIC=ON so physics state
# is bit-identical across Win-MSVC / Linux-Clang / macOS-ARM /
# Linux-ARM64. Disables JPH_USE_FMADD automatically (FMA contraction
# produces platform-specific float results). ~8% perf cost. Default
# off here -- enable from a downstream feature when the consumer
# wants the determinism guarantee.
cross-platform-deterministic = []

[dependencies]

[build-dependencies]
bindgen = "0.69.1"
cmake = "0.1.50"
walkdir = "2.5.0"
anyhow = "1.0.69"

[dev-dependencies]
rand = "0.8.5"
